--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,11 @@ name = "pypi"
 
 [packages]
 scrapy = "*"
+psycopg2 = "*"
 
 [dev-packages]
+pylint = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.8"
